syntax = "proto3";

option go_package = "github.com/sharkparty/grpc-proto;grpc_proto";

message CPU {
    string brand = 1;
    string name = 2;
    uint32 numer_cores = 3;
    uint32 number_threads = 4;
    float min_ghz = 5;
    float max_ghz = 6;
}